--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-<h1>STC APP</h1>
+<h1>Craft 404 APP</h1>
 <h2>Created by Navdeep Chawla</h2>
 <h3>Description</h3>
-STC APP is an informative app used for spreading information regarding STC-VIT.
-    <h2>Privacy Policy</h2> <p> Navdeep Chawla built the STC APP as a Free app. This SERVICE is provided by
+Craft 404 APP is an event app used during an event conducted by STC-VIT and SIAM-VIT.
+    <h2>Privacy Policy</h2> <p> Navdeep Chawla built the Craft 404 APP as a Free app. This SERVICE is provided by
                     Navdeep Chawla at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
                     of Personal Information if anyone decided to use my Service.
@@ -20,7 +20,7 @@ STC APP is an informative app used for spreading information regarding STC-VIT.
                     the Service. I will not use or share your information with anyone except as described
                     in this Privacy Policy.
                   </p> <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is
-                    accessible at STC APP unless otherwise defined in this Privacy Policy.
+                    accessible at Craft 404 APP unless otherwise defined in this Privacy Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>For a better experience, while using our Service, I may require you to provide us with certain
                     personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
                   </p> <p>The app does use third party services that may collect information used to identify you.</p> <div><p>Link to privacy policy of third party service providers used by the app</p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li><!----><li><a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a></li><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p> I want to inform you that whenever you use my Service, in a case of
